force-app/main/default/objects/Account/fields/Existing_Mail_Platform__c.field-meta.xml
<CustomField>
    <fullName>Existing_Mail_Platform__c</fullName>
    <label>Existing Mail Platform</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Google Apps</fullName>
            </value>
            <value>
                <fullName>Microsoft</fullName>
            </value>
            <value>
                <fullName>IBM Lotus</fullName>
            </value>
            <value>
                <fullName>Novell</fullName>
            </value>
            <value>
                <fullName>Unknown</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>