force-app/main/default/objects/Account/fields/Existing_Salesforce_User__c.field-meta.xml
<CustomField>
    <fullName>Existing_Salesforce_User__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Existing Salesforce User</label>
    <type>Checkbox</type>
</CustomField>