force-app/main/default/objects/Account/fields/Explode_Account_Balances__c.field-meta.xml
<CustomField>
    <fullName>Explode_Account_Balances__c</fullName>
    <formula>HYPERLINK(&quot;/lightning/r/Report/00O0J000007ehPEUAY/view?fv0=&quot;&amp; Account_ID__c , &quot;Report Link&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Explode Account Balances</label>
    <type>Text</type>
</CustomField>