force-app/main/default/objects/Account/fields/Failure_Score__c.field-meta.xml
<CustomField>
    <fullName>Failure_Score__c</fullName>
    <label>Failure Score</label>
    <precision>1</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>