force-app/main/default/objects/Account/fields/Failure_Score_Description__c.field-meta.xml
<CustomField>
    <fullName>Failure_Score_Description__c</fullName>
    <label>Failure Score Description</label>
    <type>TextArea</type>
</CustomField>