force-app/main/default/objects/Account/fields/Failure_Score_National_Percentile__c.field-meta.xml
<CustomField>
    <fullName>Failure_Score_National_Percentile__c</fullName>
    <label>Failure Score National Percentile</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>