force-app/main/default/objects/Account/fields/ffaci__CurrencyCulture__c.field-meta.xml
<CustomField>
    <fullName>ffaci__CurrencyCulture__c</fullName>
    <label>Currency Culture</label>
    <length>8</length>
    <type>Text</type>
</CustomField>