force-app/main/default/objects/Account/fields/ffbc__BillingAccount__c.field-meta.xml
<CustomField>
    <fullName>ffbc__BillingAccount__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Lookup to the Salesforce Account to use for the Billing Address.</description>
    <inlineHelpText>Lookup to the Salesforce Account to use for the Billing Address.</inlineHelpText>
    <label>Billing Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Related Billing Accounts</relationshipLabel>
    <relationshipName>SubAccounts</relationshipName>
    <type>Lookup</type>
</CustomField>