force-app/main/default/objects/Account/fields/ffbf__PaymentRoutingMethod__c.field-meta.xml
<CustomField>
    <fullName>ffbf__PaymentRoutingMethod__c</fullName>
    <label>Payment Routing Method</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>C</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>