force-app/main/default/objects/Account/fields/FFX_CaseSafeAccountID__c.field-meta.xml
<CustomField>
    <fullName>FFX_CaseSafeAccountID__c</fullName>
    <label>Account ID (Case Safe)</label>
    <length>18</length>
    <type>Text</type>
</CustomField>