force-app/main/default/objects/Account/fields/FFX_ContactCorrelationID__c.field-meta.xml
<CustomField>
    <fullName>FFX_ContactCorrelationID__c</fullName>
    <formula>IF(
$Setup.FFX_SMCustomSettings__c.FFX_UseFinanceContact__c,
IF(
ISBLANK(c2g__CODAFinanceContact__c),
IF(
ISBLANK(msg_link_SMSASC_id__c),
FFX_CaseSafeAccountID__c,
msg_link_SMSASC_id__r.FFX_CaseSafeContactID__c),
c2g__CODAFinanceContact__r.FFX_CaseSafeContactID__c),
IF(
ISBLANK(msg_link_SMSASC_id__c),
FFX_CaseSafeAccountID__c,
msg_link_SMSASC_id__r.FFX_CaseSafeContactID__c))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Contact Correlation ID</label>
    <type>Text</type>
</CustomField>