force-app/main/default/objects/Account/fields/FFX_InputTaxCodeFDN__c.field-meta.xml
<CustomField>
    <fullName>FFX_InputTaxCodeFDN__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Input VAT/GST Tax Code</label>
    <referenceTo>fferpcore__TaxCode__c</referenceTo>
    <relationshipLabel>Accounts (Input VAT/GST Tax Code)</relationshipLabel>
    <relationshipName>AcInputVATFDN</relationshipName>
    <type>Lookup</type>
</CustomField>