force-app/main/default/objects/Account/fields/FFX_SMC_Email__c.field-meta.xml
<CustomField>
    <fullName>FFX_SMC_Email__c</fullName>
    <formula>IF(ISNULL(msg_link_SMSASC_id__c),
BillingCity,
IF(msg_link_SMSASC_id__r.FFX_AllowSMCChanges__c,
msg_link_SMSASC_id__r.Email,
SCMC__E_Mail__c))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Vendor Contact: E-Mail</label>
    <type>Text</type>
</CustomField>