force-app/main/default/objects/Account/fields/FFX_SMC_FirstName__c.field-meta.xml
<CustomField>
    <fullName>FFX_SMC_FirstName__c</fullName>
    <formula>IF(ISNULL(msg_link_SMSASC_id__c),
BillingCity,
IF(msg_link_SMSASC_id__r.FFX_AllowSMCChanges__c,
msg_link_SMSASC_id__r.FirstName,
&quot;&quot;))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Vendor Contact: First Name</label>
    <type>Text</type>
</CustomField>