force-app/main/default/objects/Account/fields/FFX_SMCIsFinanceContact__c.field-meta.xml
<CustomField>
    <fullName>FFX_SMCIsFinanceContact__c</fullName>
    <formula>$Setup.FFX_SMCustomSettings__c.FFX_UseFinanceContact__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Spend Contact is Finance Contact</label>
    <type>Checkbox</type>
</CustomField>