force-app/main/default/objects/Account/fields/Framework_Agreement_Contract__c.field-meta.xml
<CustomField>
    <fullName>Framework_Agreement_Contract__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>MSA Contract</label>
    <referenceTo>Contract</referenceTo>
    <relationshipLabel>Accounts</relationshipLabel>
    <relationshipName>Accounts</relationshipName>
    <type>Lookup</type>
</CustomField>