force-app/main/default/objects/Account/fields/G_Cloud_Customer__c.field-meta.xml
<CustomField>
    <fullName>G_Cloud_Customer__c</fullName>
    <defaultValue>false</defaultValue>
    <label>G-Cloud Customer</label>
    <type>Checkbox</type>
</CustomField>