force-app/main/default/objects/Account/fields/General_Liability_Cap__c.field-meta.xml
<CustomField>
    <fullName>General_Liability_Cap__c</fullName>
    <label>General Liability Cap</label>
    <length>255</length>
    <type>Text</type>
</CustomField>