force-app/main/default/objects/Account/fields/Global_turnover_value__c.field-meta.xml
<CustomField>
    <fullName>Global_turnover_value__c</fullName>
    <label>Global turnover value</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>&lt;$500M</fullName>
            </value>
            <value>
                <fullName>$500M - $1B</fullName>
            </value>
            <value>
                <fullName>$1B - $10B</fullName>
            </value>
            <value>
                <fullName>&gt;$10B</fullName>
            </value>
            <value>
                <fullName>Public Sector</fullName>
            </value>
            <value>
                <fullName>Relus not specified</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>