force-app/main/default/objects/Account/fields/Global_Ultimate_Continental_Region__c.field-meta.xml
<CustomField>
    <fullName>Global_Ultimate_Continental_Region__c</fullName>
    <label>Global Ultimate: Continental Region</label>
    <type>TextArea</type>
</CustomField>