force-app/main/default/objects/Account/fields/Global_Ultimate_Country__c.field-meta.xml
<CustomField>
    <fullName>Global_Ultimate_Country__c</fullName>
    <label>Global Ultimate: Country</label>
    <type>TextArea</type>
</CustomField>