force-app/main/default/objects/Account/fields/Global_Ultimate_Locality__c.field-meta.xml
<CustomField>
    <fullName>Global_Ultimate_Locality__c</fullName>
    <label>Global Ultimate: Locality</label>
    <type>TextArea</type>
</CustomField>