force-app/main/default/objects/Account/fields/Global_Ultimate_Name__c.field-meta.xml
<CustomField>
    <fullName>Global_Ultimate_Name__c</fullName>
    <label>Global Ultimate: Name</label>
    <type>TextArea</type>
</CustomField>