force-app/main/default/objects/Account/fields/Global_Ultimate_Region_Code__c.field-meta.xml
<CustomField>
    <fullName>Global_Ultimate_Region_Code__c</fullName>
    <label>Global Ultimate: Region Code</label>
    <type>TextArea</type>
</CustomField>