force-app/main/default/objects/Account/fields/Google__c.field-meta.xml
<CustomField>
    <fullName>Google__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Google</label>
    <type>Checkbox</type>
</CustomField>