force-app/main/default/objects/Account/fields/Identify_any_uncapped_liability__c.field-meta.xml
<CustomField>
    <fullName>Identify_any_uncapped_liability__c</fullName>
    <label>Identify any uncapped liability</label>
    <length>255</length>
    <type>Text</type>
</CustomField>