force-app/main/default/objects/Account/fields/Include_in_CONGA_bulk_run__c.field-meta.xml
<CustomField>
    <fullName>Include_in_CONGA_bulk_run__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Include in CONGA bulk run ?</label>
    <type>Checkbox</type>
</CustomField>