force-app/main/default/objects/Account/fields/Industry_Code__c.field-meta.xml
<CustomField>
    <fullName>Industry_Code__c</fullName>
    <label>Industry Code</label>
    <length>10</length>
    <type>Text</type>
</CustomField>