force-app/main/default/objects/Account/fields/Industry_Description__c.field-meta.xml
<CustomField>
    <fullName>Industry_Description__c</fullName>
    <label>Industry Description</label>
    <type>TextArea</type>
</CustomField>