force-app/main/default/objects/Account/fields/Intent_Surging_Topics__c.field-meta.xml
<CustomField>
    <fullName>Intent_Surging_Topics__c</fullName>
    <label>Intent - # Surging Topics</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>