force-app/main/default/objects/Account/fields/IP_risk_assessment_needed_per_OF__c.field-meta.xml
<CustomField>
    <fullName>IP_risk_assessment_needed_per_OF__c</fullName>
    <defaultValue>false</defaultValue>
    <label>IP risk assessment needed per OF?</label>
    <type>Checkbox</type>
</CustomField>