force-app/main/default/objects/Account/fields/IP_Risk_Assessment_Needed_per_OF_formula__c.field-meta.xml
<CustomField>
    <fullName>IP_Risk_Assessment_Needed_per_OF_formula__c</fullName>
    <formula>IF(ISNULL( Framework_Agreement_Contract__c ),false, Framework_Agreement_Contract__r.IP_risk_assessment_needed_per_OF__c )</formula>
    <label>IP Risk Assessment Needed per OF?</label>
    <type>Checkbox</type>
</CustomField>