force-app/main/default/objects/Account/fields/Is_consent_needed_for_logo_use_etc__c.field-meta.xml
<CustomField>
    <fullName>Is_consent_needed_for_logo_use_etc__c</fullName>
    <label>Is consent needed for logo use(etc)?</label>
    <length>255</length>
    <type>Text</type>
</CustomField>