force-app/main/default/objects/Account/fields/Is_it_CR_s_template__c.field-meta.xml
<CustomField>
    <fullName>Is_it_CR_s_template__c</fullName>
    <label>Is it CR’s template?</label>
    <length>255</length>
    <type>Text</type>
</CustomField>