force-app/main/default/objects/Account/fields/Is_Partner_also_a_Migration_Partner__c.field-meta.xml
<CustomField>
    <fullName>Is_Partner_also_a_Migration_Partner__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Partner also a Migration Partner?</label>
    <type>Checkbox</type>
</CustomField>