force-app/main/default/objects/Account/fields/Is_there_a_change_request_process__c.field-meta.xml
<CustomField>
    <fullName>Is_there_a_change_request_process__c</fullName>
    <label>Is there a change request process?</label>
    <length>255</length>
    <type>Text</type>
</CustomField>