force-app/main/default/objects/Account/fields/Is_there_a_discount_rebate_scheme__c.field-meta.xml
<CustomField>
    <fullName>Is_there_a_discount_rebate_scheme__c</fullName>
    <label>Is there a discount/rebate scheme?</label>
    <length>255</length>
    <type>Text</type>
</CustomField>