force-app/main/default/objects/Account/fields/Is_there_a_periodic_increase_in_rates__c.field-meta.xml
<CustomField>
    <fullName>Is_there_a_periodic_increase_in_rates__c</fullName>
    <label>Is there a periodic increase in rates?</label>
    <length>255</length>
    <type>Text</type>
</CustomField>