force-app/main/default/objects/Account/fields/Is_there_an_acceptance_process__c.field-meta.xml
<CustomField>
    <fullName>Is_there_an_acceptance_process__c</fullName>
    <label>Is there an acceptance process?</label>
    <length>255</length>
    <type>Text</type>
</CustomField>