force-app/main/default/objects/Account/fields/Is_there_an_agreed_rate_card__c.field-meta.xml
<CustomField>
    <fullName>Is_there_an_agreed_rate_card__c</fullName>
    <label>Is there an agreed rate card?</label>
    <length>255</length>
    <type>Text</type>
</CustomField>