force-app/main/default/objects/Account/fields/Is_there_an_automatic_renewal_period__c.field-meta.xml
<CustomField>
    <fullName>Is_there_an_automatic_renewal_period__c</fullName>
    <label>MSA term/automatic renewals</label>
    <length>255</length>
    <type>Text</type>
</CustomField>