force-app/main/default/objects/Account/fields/IT_Budget__c.field-meta.xml
<CustomField>
    <fullName>IT_Budget__c</fullName>
    <label>IT Budget</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>