force-app/main/default/objects/Account/fields/Known_SaaS_Vendors__c.field-meta.xml
<CustomField>
    <fullName>Known_SaaS_Vendors__c</fullName>
    <label>Known SaaS Vendors</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Salesforce</fullName>
            </value>
            <value>
                <fullName>Financialforce</fullName>
            </value>
            <value>
                <fullName>Oracle OnDemand</fullName>
            </value>
            <value>
                <fullName>DocuSign/EchoSign</fullName>
            </value>
            <value>
                <fullName>Dynamics</fullName>
            </value>
            <value>
                <fullName>Apttus</fullName>
            </value>
            <value>
                <fullName>WorkDay</fullName>
            </value>
            <value>
                <fullName>Sugar CRM</fullName>
            </value>
            <value>
                <fullName>SAP By Design</fullName>
            </value>
            <value>
                <fullName>NetSuite</fullName>
            </value>
            <value>
                <fullName>Eloqua</fullName>
            </value>
            <value>
                <fullName>Marketo</fullName>
            </value>
            <value>
                <fullName>Akamai</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>