force-app/main/default/objects/Account/fields/Latest_invoice_date__c.field-meta.xml
<CustomField>
    <fullName>Latest_invoice_date__c</fullName>
    <description>Will be populated by Declarative Rollup Lookup Summary</description>
    <label>Latest invoice date</label>
    <type>Date</type>
</CustomField>