force-app/main/default/objects/Account/fields/License_Partner__c.field-meta.xml
<CustomField>
    <fullName>License_Partner__c</fullName>
    <defaultValue>false</defaultValue>
    <label>License Partner</label>
    <type>Checkbox</type>
</CustomField>