force-app/main/default/objects/Account/fields/Link_to_Account_Plan__c.field-meta.xml
<CustomField>
    <fullName>Link_to_Account_Plan__c</fullName>
    <inlineHelpText>Please use this field to provide the link to the Account Folder that houses all Account Planning Documents. This folder should be stored on the Shared Drive titled Sales-Shared Account Plan Documents.</inlineHelpText>
    <label>Link to Account Plan Documents</label>
    <type>Url</type>
</CustomField>