force-app/main/default/objects/Account/fields/Link_to_draft_Customer_PO_Terms__c.field-meta.xml
<CustomField>
    <fullName>Link_to_draft_Customer_PO_Terms__c</fullName>
    <inlineHelpText>Enter the link to the draft Customer PO terms here</inlineHelpText>
    <label>Link to draft Customer PO Terms</label>
    <type>Url</type>
</CustomField>