force-app/main/default/objects/Account/fields/Link_to_draft_framework_agreement__c.field-meta.xml
<CustomField>
    <fullName>Link_to_draft_framework_agreement__c</fullName>
    <inlineHelpText>Enter the link to the draft framework agreement here</inlineHelpText>
    <label>Link to draft framework agreement</label>
    <type>Url</type>
</CustomField>