force-app/main/default/objects/Account/fields/Link_to_draft_NDA__c.field-meta.xml
<CustomField>
    <fullName>Link_to_draft_NDA__c</fullName>
    <description>Enter the link to the draft NDA here</description>
    <inlineHelpText>Enter the link to the draft NDA here</inlineHelpText>
    <label>Link to draft NDA</label>
    <type>Url</type>
</CustomField>