force-app/main/default/objects/Account/fields/Linkedin_Company_URL__c.field-meta.xml
<CustomField>
    <fullName>Linkedin_Company_URL__c</fullName>
    <description>The full URL to leads company</description>
    <label>Linkedin Company URL</label>
    <type>Url</type>
</CustomField>