force-app/main/default/objects/Account/fields/Linkedin_Size__c.field-meta.xml
<CustomField>
    <fullName>Linkedin_Size__c</fullName>
    <description>The size of the company according to linkedin</description>
    <inlineHelpText>Enter the size of the company according to linkedin</inlineHelpText>
    <label>Linkedin Size</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>201-500</fullName>
            </value>
            <value>
                <fullName>501-1000</fullName>
            </value>
            <value>
                <fullName>1001-5000</fullName>
            </value>
            <value>
                <fullName>5001-10000</fullName>
            </value>
            <value>
                <fullName>10000+</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>