force-app/main/default/objects/Account/fields/Mailing_Address_Continental_Region__c.field-meta.xml
<CustomField>
    <fullName>Mailing_Address_Continental_Region__c</fullName>
    <label>Mailing Address: Continental Region</label>
    <type>TextArea</type>
</CustomField>