force-app/main/default/objects/Account/fields/Mailing_Address_Region__c.field-meta.xml
<CustomField>
    <fullName>Mailing_Address_Region__c</fullName>
    <label>Mailing Address: Region</label>
    <type>TextArea</type>
</CustomField>