force-app/main/default/objects/Account/fields/Marketing_Approved_Reference__c.field-meta.xml
<CustomField>
    <fullName>Marketing_Approved_Reference__c</fullName>
    <description>Tracks when a customer has given Cloudreach permission, in a Framework Agreement, to use their logo in Marketing collateral.</description>
    <inlineHelpText>Tracks when a customer has given Cloudreach permission, in a Framework Agreement, to use their logo in Marketing collateral.</inlineHelpText>
    <label>Marketing - Approved Reference</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Logo</fullName>
            </value>
            <value>
                <fullName>Case study</fullName>
            </value>
            <value>
                <fullName>Reference</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>