force-app/main/default/objects/Account/fields/Maximum_Recommended_Credit_Limit__c.field-meta.xml
<CustomField>
    <fullName>Maximum_Recommended_Credit_Limit__c</fullName>
    <label>Maximum Recommended Credit Limit</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>