force-app/main/default/objects/Account/fields/Migration_Partner__c.field-meta.xml
<CustomField>
    <fullName>Migration_Partner__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Migration Partner</label>
    <type>Checkbox</type>
</CustomField>