force-app/main/default/objects/Account/fields/Monthly_Recurring_Revenue__c.field-meta.xml
<CustomField>
    <fullName>Monthly_Recurring_Revenue__c</fullName>
    <description>A free text box where we add a monetary value.</description>
    <inlineHelpText>Please add the monthly recurring revenue here</inlineHelpText>
    <label>Monthly Recurring Revenue</label>
    <length>32</length>
    <type>Text</type>
</CustomField>