force-app/main/default/objects/Account/fields/Most_recent_closed_opportunity__c.field-meta.xml
<CustomField>
    <fullName>Most_recent_closed_opportunity__c</fullName>
    <label>Most recent closed opportunity</label>
    <summarizedField>Opportunity.CloseDate</summarizedField>
    <summaryFilterItems>
        <field>Opportunity.StageName</field>
        <operation>equals</operation>
        <value>Closed Won, Closed Won - Prime, Order Validated</value>
    </summaryFilterItems>
    <summaryForeignKey>Opportunity.AccountId</summaryForeignKey>
    <summaryOperation>max</summaryOperation>
    <type>Summary</type>
</CustomField>