force-app/main/default/objects/Account/fields/Most_Recent_Invoice_Date__c.field-meta.xml
<CustomField>
    <fullName>Most_Recent_Invoice_Date__c</fullName>
    <label>Most Recent Invoice Date</label>
    <summarizedField>Opportunity.Latest_invoice_date__c</summarizedField>
    <summaryForeignKey>Opportunity.AccountId</summaryForeignKey>
    <summaryOperation>max</summaryOperation>
    <type>Summary</type>
</CustomField>