force-app/main/default/objects/Account/fields/MS_Service_Type__c.field-meta.xml
<CustomField>
    <fullName>MS_Service_Type__c</fullName>
    <description>Major Incident Process Service Type</description>
    <label>MS Service Type</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Google</fullName>
            </value>
            <value>
                <fullName>Amazon</fullName>
            </value>
            <value>
                <fullName>Salesforce</fullName>
            </value>
            <value>
                <fullName>Alumina</fullName>
            </value>
            <value>
                <fullName>Heroku</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>