force-app/main/default/objects/Account/fields/MSFT_Generated__c.field-meta.xml
<CustomField>
    <fullName>MSFT_Generated__c</fullName>
    <defaultValue>false</defaultValue>
    <label>MSFT Generated</label>
    <type>Checkbox</type>
</CustomField>