force-app/main/default/objects/Account/fields/MSFT_Integration_Billing_Country__c.field-meta.xml
<CustomField>
    <fullName>MSFT_Integration_Billing_Country__c</fullName>
    <label>MSFT Integration Billing Country</label>
    <length>2</length>
    <type>Text</type>
</CustomField>