force-app/main/default/objects/Account/fields/msg_link_SMSASC_errors__c.field-meta.xml
<CustomField>
    <fullName>msg_link_SMSASC_errors__c</fullName>
    <label>Vendor Contact Error(s)</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>