force-app/main/default/objects/Account/fields/msg_link_SMSASC_id__c.field-meta.xml
<CustomField>
    <fullName>msg_link_SMSASC_id__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Vendor Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Accounts (Vendor Contact)</relationshipLabel>
    <relationshipName>ACSMSC</relationshipName>
    <type>Lookup</type>
</CustomField>