force-app/main/default/objects/Account/fields/msg_link_SMSASC_state__c.field-meta.xml
<CustomField>
    <fullName>msg_link_SMSASC_state__c</fullName>
    <label>Vendor Contact Status</label>
    <length>30</length>
    <type>Text</type>
</CustomField>