force-app/main/default/objects/Account/fields/Name_of_Legal_reviewer__c.field-meta.xml
<CustomField>
    <fullName>Name_of_Legal_reviewer__c</fullName>
    <label>Name of Legal reviewer</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Lakhan Shah</fullName>
            </value>
            <value>
                <fullName>Stephanie Leopold</fullName>
            </value>
            <value>
                <fullName>Ruth Orpwood</fullName>
            </value>
            <value>
                <fullName>Giovanni Li Voti</fullName>
            </value>
            <value>
                <fullName>Maddy Goldfarb</fullName>
            </value>
            <value>
                <fullName>Oliver Richardson</fullName>
                <isActive>false</isActive>
                <label>Oliver Richardson</label>
            </value>
            <value>
                <fullName>Phil Wyatt</fullName>
                <isActive>false</isActive>
                <label>Phil Wyatt</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>