force-app/main/default/objects/Account/fields/non_standard_SLA__c.field-meta.xml
<CustomField>
    <fullName>non_standard_SLA__c</fullName>
    <label>Is there a non-standard SLA</label>
    <length>255</length>
    <type>Text</type>
</CustomField>