force-app/main/default/objects/Account/fields/Number_of_address_records__c.field-meta.xml
<CustomField>
    <fullName>Number_of_address_records__c</fullName>
    <label>Number of address records</label>
    <summaryForeignKey>Addresses_for_Invoicing__c.Account__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>